# prakash_python-_tasks

day2_python_task/: README.md  main.py  requirements.txt  task1_greet.py  task2_calculator.py  task2_expcalc.py  task3_evenvsodd.py  task4_largestnum.py  task5_multable.py  task6_revstr.py  task7_prime.py  task8_fibonacci.py  utils.py
day3_python_tasks/: .gitignore  README.md  learn_concept.ipynb  student_marks.json  task_a_4_tuples.py  task_b_1_emailval.py  task_b_2_password.py  task_b_3_cart.py
day3_python_tasks/basics/: task_a_1_list.py  task_a_2_dict.py  task_a_3_set.py
day3_python_tasks/manual_test/: test_task_b_2_password.py
day3_python_tasks/mini_project_task/: task_1_mark_process.py
day3_python_tasks/tests/: test_task_b_1_emailval.py
day3_python_tasks/validations/: task_b_1_emailval.py  task_b_2_password.py
day4_python_tasks/student_api_python/: README.md  pyproject.toml  requirements.txt
day4_python_tasks/student_api_python/app/: main.py
day4_python_tasks/student_api_python/app/models/: student_model.py
day4_python_tasks/student_api_python/app/routers/: student_router.py
day4_python_tasks/student_api_python/app/schemas/: student_schema.py
day4_python_tasks/student_api_python/app/services/: student_service.py
day4_python_tasks/student_api_python/tests/: test_students.py
