[project]
name = "student-api-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eof",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic[email-validator]>=2.12.5",
    "pytest>=9.0.2",
    "uvicorn[standard]>=0.40.0",
]
